--- a/index.html
+++ b/index.html
@@ -1,24 +1,102 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./lib/bootstrap-5.3.3-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./public/assets/css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="./lib/bootstrap-5.3.3-dist/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="./public/assets/css/style.css" />
     <title>CollabGarden</title>
-</head>
-<body>
-    <header>
+  </head>
+  <body>
+    <header></header>
 
-    </header>
-
+    <!-- Main -->
     <main>
+      <!-- Hero -->
+      <section class="container-fluid bg-primary">
+        <div class="container">
+          <div class="row">
+            <!-- Slogan -->
+            <div class="col-12 d-flex justify-content-end">
+              <div>
+                <p>
+                  Échangeons graines, plantes et arbres pour cultiver la
+                  diversité ensemble !
+                </p>
+              </div>
+            </div>
+            <!-- Button call to action -->
+            <div class="col-12 d-flex justify-content-end">
+              <button>Trouver vos plantes</button>
+            </div>
+          </div>
+        </div>
+      </section>
 
+      <!-- Groupe de buttons -->
+      <section class="container">
+        <div class="d-flex justify-content-between">
+          <button><img src="" alt="" />Graines</button>
+          <button><img src="" alt="" />Plantes</button>
+          <button><img src="" alt="" />Arbres</button>
+        </div>
+        <div class="d-flex justify-content-center">
+          <button>CRÉER UNE ANNONCE</button>
+        </div>
+      </section>
+
+      <!-- Annonces -->
+      <section class="container">
+        <!-- Graines -->
+        <div>
+          <div class="d-flex justify-content-between align-items-center">
+            <h2>Graines</h2>
+            <a href="#">Tout voir</a>
+          </div>
+          <div class="d-flex gap-3">
+            <div class="card" style="width: 18rem">
+              <img
+                src="./public/assets/img/annonce_1.jpg"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <div>
+                  <h5 class="card-title">Graines de chia</h5>
+                  <i class="fa-regular fa-star"></i>
+                </div>
+                <p class="card-text">Amiens, 80000</p>
+              </div>
+            </div>
+            <div class="card" style="width: 18rem">
+              <img src="..." class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Plantes -->
+        <div></div>
+        <!-- Arbres -->
+        <div></div>
+      </section>
+      <!-- Fin main -->
     </main>
 
-    <footer>
+    <footer></footer>
 
-    </footer>
+    <script
+      src="https://kit.fontawesome.com/b4f9175766.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="./lib/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
-</body>
+  </body>
 </html>
