--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header>
-      <div class="container">
+      <!-- <div class="container">
         <div class="row">
           <div class="col-6">
             <div class="logo">
@@ -30,27 +30,25 @@
             <div class="search_bar"></div>
           </div>
         </div>
-      </div>
+      </div> -->
     </header>
 
     <!-- Main -->
     <main>
       <!-- Hero -->
-      <section class="container-fluid bg-primary">
-        <div class="container">
+      <section id="hero" class="container-fluid bg-image">
+        <div class="container h-100 p-0 d-flex align-items-center">
           <div class="row">
             <!-- Slogan -->
             <div class="col-12 d-flex justify-content-end">
-              <div>
-                <p>
-                  Échangeons graines, plantes et arbres pour cultiver la
-                  diversité ensemble !
-                </p>
-              </div>
+              <p>
+                Échangeons graines, plantes et arbres pour cultiver la diversité
+                ensemble !
+              </p>
             </div>
             <!-- Button call to action -->
             <div class="col-12 d-flex justify-content-end">
-              <button>Trouver vos plantes</button>
+              <button class="btn-hero">Trouver vos plantes</button>
             </div>
           </div>
         </div>
@@ -84,29 +82,103 @@
                 alt="..."
               />
               <div class="card-body">
-                <div>
+                <div class="d-flex">
                   <h5 class="card-title">Graines de chia</h5>
-                  <i class="fa-regular fa-star"></i>
+                  <div><i class="fa-regular fa-star"></i>5</div>
                 </div>
                 <p class="card-text">Amiens, 80000</p>
               </div>
             </div>
             <div class="card" style="width: 18rem">
-              <img src="..." class="card-img-top" alt="..." />
+              <img
+                src="./public/assets/img/annonce_1.jpg"
+                class="card-img-top"
+                alt="..."
+              />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
-                </p>
+                <div class="d-flex">
+                  <h5 class="card-title">Graines de chia</h5>
+                  <div><i class="fa-regular fa-star"></i>5</div>
+                </div>
+                <p class="card-text">Amiens, 80000</p>
               </div>
             </div>
           </div>
         </div>
         <!-- Plantes -->
-        <div></div>
+        <div>
+          <div class="d-flex justify-content-between align-items-center">
+            <h2>Plantes</h2>
+            <a href="#">Tout voir</a>
+          </div>
+          <div class="d-flex gap-3">
+            <div class="card" style="width: 18rem">
+              <img
+                src="./public/assets/img/annonce_1.jpg"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <div class="d-flex">
+                  <h5 class="card-title">Graines de chia</h5>
+                  <div><i class="fa-regular fa-star"></i>5</div>
+                </div>
+                <p class="card-text">Amiens, 80000</p>
+              </div>
+            </div>
+            <div class="card" style="width: 18rem">
+              <img
+                src="./public/assets/img/annonce_1.jpg"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <div class="d-flex">
+                  <h5 class="card-title">Graines de chia</h5>
+                  <div><i class="fa-regular fa-star"></i>5</div>
+                </div>
+                <p class="card-text">Amiens, 80000</p>
+              </div>
+            </div>
+          </div>
+        </div>
         <!-- Arbres -->
-        <div></div>
+        <div>
+          <div class="d-flex justify-content-between align-items-center">
+            <h2>Graines</h2>
+            <a href="#">Tout voir</a>
+          </div>
+          <div class="d-flex gap-3">
+            <div class="card" style="width: 18rem">
+              <img
+                src="./public/assets/img/annonce_1.jpg"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <div class="d-flex">
+                  <h5 class="card-title">Graines de chia</h5>
+                  <div><i class="fa-regular fa-star"></i>5</div>
+                </div>
+                <p class="card-text">Amiens, 80000</p>
+              </div>
+            </div>
+            <div class="card" style="width: 18rem">
+              <img
+                src="./public/assets/img/annonce_1.jpg"
+                class="card-img-top"
+                alt="..."
+              />
+              <div class="card-body">
+                <div class="d-flex">
+                  <h5 class="card-title">Graines de chia</h5>
+                  <div><i class="fa-regular fa-star"></i>5</div>
+                </div>
+                <p class="card-text">Amiens, 80000</p>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
       <!-- Fin main -->
     </main>
