changements 15/03 buttons+hero

--- a/index.html
+++ b/index.html
@@ -37,32 +37,38 @@
     <main>
       <!-- Hero -->
       <section id="hero" class="container-fluid bg-image">
-        <div class="container h-100 p-0 d-flex align-items-center">
-          <div class="row">
-            <!-- Slogan -->
-            <div class="col-12 d-flex justify-content-end">
-              <p>
-                Échangeons graines, plantes et arbres pour cultiver la diversité
-                ensemble !
-              </p>
-            </div>
-            <!-- Button call to action -->
-            <div class="col-12 d-flex justify-content-end">
-              <button class="btn-hero">Trouver vos plantes</button>
+        <div class="row">
+          <div
+            class="col-12 d-flex flex-column justify-content-center bg-image"
+          >
+            <div class="container p-0">
+              <div class="row">
+                <!-- Slogan -->
+                <div class="col-12 d-flex justify-content-end">
+                  <p>
+                    Échangeons graines, plantes et arbres pour cultiver la
+                    diversité ensemble !
+                  </p>
+                </div>
+                <!-- Button call to action -->
+                <div class="col-12 d-flex justify-content-end">
+                  <button class="btn-hero">Trouver vos plantes</button>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </section>
 
       <!-- Groupe de buttons -->
-      <section class="container">
+      <section class="container d-lg-none mt-4">
         <div class="d-flex justify-content-between">
-          <button><img src="" alt="" />Graines</button>
-          <button><img src="" alt="" />Plantes</button>
-          <button><img src="" alt="" />Arbres</button>
+          <button class="btn-mobile-home"><img src="" alt="" />Graines</button>
+          <button class="btn-mobile-home"><img src="" alt="" />Plantes</button>
+          <button class="btn-mobile-home"><img src="" alt="" />Arbres</button>
         </div>
-        <div class="d-flex justify-content-center">
-          <button>CRÉER UNE ANNONCE</button>
+        <div class="d-flex justify-content-center mt-3">
+          <button class="btn-action">CRÉER UNE ANNONCE</button>
         </div>
       </section>
 
