--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
                 <!-- Button call to action -->
                 <div class="col-12 d-flex justify-content-end">
-                  <button class="btn-hero">Trouver vos plantes</button>
+                  <button class="btn-action">Trouver vos plantes</button>
                 </div>
               </div>
             </div>
@@ -73,7 +73,7 @@
       </section>
 
       <!-- Annonces -->
-      <section class="container">
+      <section class="categories container">
         <!-- Graines -->
         <div>
           <div class="d-flex justify-content-between align-items-center">
