--- a/index.html
+++ b/index.html
@@ -15,25 +15,6 @@
 
 <body>
     <header>
-      <!-- <div class="container">
-        <div class="row">
-          <div class="col-6">
-            <div class="logo">
-              <img src="./public/assets/img/CollabGarden.png" />
-            </div>
-          </div>
-
-          <div class="col-6">
-            <div class="p_profil">
-              <img src="./public/assets/img/p_profil.png" />
-            </div>
-          </div>
-
-          <div class="col-12">
-            <div class="search_bar"></div>
-          </div>
-        </div>
-      </div> -->
     </header>
 
     <!-- Main -->
@@ -48,7 +29,7 @@
               <div class="row">
                 <!-- Slogan -->
                 <div class="col-12 d-flex justify-content-end">
-                  <p class="text-white">
+                  <p class="text-white text-end">
                     Échangeons graines, plantes et arbres pour cultiver la
                     diversité ensemble !
                   </p>
@@ -66,9 +47,9 @@
       <!-- Groupe de buttons -->
       <section class="container d-lg-none mt-4">
         <div class="d-flex justify-content-between">
-          <button class="btn-mobile-home d-flex align-items-center justify-content-center py-1"><img src="./public/assets/img/icon-seeds.png" class="icon" alt="" /><p class="m-0">Graines</p></button>
-          <button class="btn-mobile-home d-flex align-items-center justify-content-center py-1"><img src="./public/assets/img/icon-plant.png" class="icon" alt=""><p class="m-0">Plantes</p></button>
-          <button class="btn-mobile-home d-flex align-items-center justify-content-center py-1"><img src="./public/assets/img/icon-tree.png" class="icon" alt=""><p class="m-0">Arbres</p></button>
+          <button class="btn-mobile-home d-flex align-items-center justify-content-center py-1"><img src="./public/assets/img/icon-seeds.png" class="w-25 pe-1" alt="" /><p class="m-0">Graines</p></button>
+          <button class="btn-mobile-home d-flex align-items-center justify-content-center py-1"><img src="./public/assets/img/icon-plant.png" class="w-25 pe-1" alt=""><p class="m-0">Plantes</p></button>
+          <button class="btn-mobile-home d-flex align-items-center justify-content-center py-1"><img src="./public/assets/img/icon-tree.png" class="w-25 pe-1" alt=""><p class="m-0">Arbres</p></button>
         </div>
         <div class="d-flex justify-content-center mt-3 mb-3">
           <button class="btn-action">CRÉER UNE ANNONCE</button>
@@ -81,7 +62,7 @@
         <div class="mb-3">
           <div class="d-flex justify-content-between align-items-center mb-2">
             <h2>Graines</h2>
-            <a href="#" class="d-lg-none">Tout voir</a>
+            <a href="#" class="d-lg-none text-black text-decoration-none">Tout voir</a>
           </div>
           <div class="d-flex gap-3">
             <div class="card border-0">
@@ -95,7 +76,7 @@
                   <h5 class="card-title">Graines de chia</h5>
                   <div>
                     <i class="fa-regular fa-star"></i>
-                    <span>5</span>
+                    <span class="fw-bold">5</span>
                   </div>
                 </div>
                 <p class="card-text">Amiens, 80000</p>
@@ -112,7 +93,7 @@
                   <h5 class="card-title">Blé</h5>
                   <div>
                     <i class="fa-regular fa-star"></i>
-                    <span>5</span>
+                    <span class="fw-bold">5</span>
                   </div>
                 </div>
                 <p class="card-text">Amiens, 80000</p>
@@ -129,7 +110,7 @@
                   <h5 class="card-title">Tournesol</h5>
                   <div>
                     <i class="fa-regular fa-star"></i>
-                    <span>5</span>
+                    <span class="fw-bold">5</span>
                   </div>
                 </div>
                 <p class="card-text">Amiens, 80000</p>
@@ -146,7 +127,7 @@
                   <h5 class="card-title">Tournesol</h5>
                   <div>
                     <i class="fa-regular fa-star"></i>
-                    <span>5</span>
+                    <span class="fw-bold">5</span>
                   </div>
                 </div>
                 <p class="card-text">Amiens, 80000</p>
@@ -159,7 +140,7 @@
         <div class="mb-3">
           <div class="d-flex justify-content-between align-items-center mb-2">
             <h2>Plantes</h2>
-            <a href="#" class="d-lg-none">Tout voir</a>
+            <a href="#" class="d-lg-none text-black text-decoration-none">Tout voir</a>
           </div>
           <div class="d-flex gap-3">
             <div class="card border-0">
@@ -173,7 +154,7 @@
                   <h5 class="card-title">Lotus</h5>
                   <div>
                     <i class="fa-regular fa-star"></i>
-                    <span>5</span>
+                    <span class="fw-bold">5</span>
                   </div>
                 </div>
                 <p class="card-text">Amiens, 80000</p>
@@ -190,7 +171,7 @@
                   <h5 class="card-title">Rose bicolore</h5>
                   <div>
                     <i class="fa-regular fa-star"></i>
-                    <span>5</span>
+                    <span class="fw-bold">5</span>
                   </div>
                 </div>
                 <p class="card-text">Amiens, 80000</p>
@@ -207,7 +188,7 @@
                   <h5 class="card-title">Rose orange</h5>
                   <div>
                     <i class="fa-regular fa-star"></i>
-                    <span>5</span>
+                    <span class="fw-bold">5</span>
                   </div>
                 </div>
                 <p class="card-text">Amiens, 80000</p>
@@ -224,7 +205,7 @@
                   <h5 class="card-title">Rose orange</h5>
                   <div>
                     <i class="fa-regular fa-star"></i>
-                    <span>5</span>
+                    <span class="fw-bold">5</span>
                   </div>
                 </div>
                 <p class="card-text">Amiens, 80000</p>
@@ -237,7 +218,7 @@
         <div class="mb-3">
           <div class="d-flex justify-content-between align-items-center mb-2">
             <h2>Arbres</h2>
-            <a href="#" class="d-lg-none">Tout voir</a>
+            <a href="#" class="d-lg-none text-black text-decoration-none">Tout voir</a>
           </div>
           <div class="d-flex gap-3">
             <div class="card border-0">
@@ -251,7 +232,7 @@
                   <h5 class="card-title">Bonsai</h5>
                   <div>
                     <i class="fa-regular fa-star"></i>
-                    <span>5</span>
+                    <span class="fw-bold">5</span>
                   </div>
                 </div>
                 <p class="card-text">Amiens, 80000</p>
@@ -268,7 +249,7 @@
                   <h5 class="card-title">Oranger</h5>
                   <div>
                     <i class="fa-regular fa-star"></i>
-                    <span>5</span>
+                    <span class="fw-bold">5</span>
                   </div>
                 </div>
                 <p class="card-text">Amiens, 80000</p>
@@ -285,7 +266,7 @@
                   <h5 class="card-title">Pommier</h5>
                   <div>
                     <i class="fa-regular fa-star"></i>
-                    <span>5</span>
+                    <span class="fw-bold">5</span>
                   </div>
                 </div>
                 <p class="card-text">Amiens, 80000</p>
@@ -302,7 +283,7 @@
                   <h5 class="card-title">Pommier</h5>
                   <div>
                     <i class="fa-regular fa-star"></i>
-                    <span>5</span>
+                    <span class="fw-bold">5</span>
                   </div>
                 </div>
                 <p class="card-text">Amiens, 80000</p>
