--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,232 +10,77 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="./public/assets/css/style.css">
     <title>CollabGarden</title>
-  </head>
-  <body>
 </head>
 
 <body>
-    <header>
-      <!-- <div class="container">
-        <div class="row">
-          <div class="col-6">
-            <div class="logo">
-              <img src="./public/assets/img/CollabGarden.png" />
-            </div>
-          </div>
+    </head>
 
-          <div class="col-6">
-            <div class="p_profil">
-              <img src="./public/assets/img/p_profil.png" />
-            </div>
-          </div>
+    <body>
+        <header>
 
-          <div class="col-12">
-            <div class="search_bar"></div>
-          </div>
-        </div>
-      </div> -->
-    </header>
+        </header>
 
-    <!-- Main -->
-    <main>
-      <!-- Hero -->
-      <section id="hero" class="container-fluid bg-image">
-        <div class="row">
-          <div
-            class="col-12 d-flex flex-column justify-content-center bg-image"
-          >
-            <div class="container p-0">
-              <div class="row">
-                <!-- Slogan -->
-                <div class="col-12 d-flex justify-content-end">
-                  <p>
-                    Échangeons graines, plantes et arbres pour cultiver la
-                    diversité ensemble !
-                  </p>
-                </div>
-                <!-- Button call to action -->
-                <div class="col-12 d-flex justify-content-end">
-                  <button class="btn-action">Trouver vos plantes</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
 
-      <!-- Groupe de buttons -->
-      <section class="container d-lg-none mt-4">
-        <div class="d-flex justify-content-between">
-          <button class="btn-mobile-home"><img src="" alt="" />Graines</button>
-          <button class="btn-mobile-home"><img src="" alt="" />Plantes</button>
-          <button class="btn-mobile-home"><img src="" alt="" />Arbres</button>
-        </div>
-        <div class="d-flex justify-content-center mt-3">
-          <button class="btn-action">CRÉER UNE ANNONCE</button>
-        </div>
-      </section>
-
-      <!-- Annonces -->
-      <section class="categories container">
-        <!-- Graines -->
-        <div>
-          <div class="d-flex justify-content-between align-items-center">
-            <h2>Graines</h2>
-            <a href="#">Tout voir</a>
-          </div>
-          <div class="d-flex gap-3">
-            <div class="card" style="width: 18rem">
-              <img
-                src="./public/assets/img/annonce_1.jpg"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <div class="d-flex">
-                  <h5 class="card-title">Graines de chia</h5>
-                  <div><i class="fa-regular fa-star"></i>5</div>
-                </div>
-                <p class="card-text">Amiens, 80000</p>
-              </div>
-            </div>
-            <div class="card" style="width: 18rem">
-              <img
-                src="./public/assets/img/annonce_1.jpg"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <div class="d-flex">
-                  <h5 class="card-title">Graines de chia</h5>
-                  <div><i class="fa-regular fa-star"></i>5</div>
-                </div>
-                <p class="card-text">Amiens, 80000</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- Plantes -->
-        <div>
-          <div class="d-flex justify-content-between align-items-center">
-            <h2>Plantes</h2>
-            <a href="#">Tout voir</a>
-          </div>
-          <div class="d-flex gap-3">
-            <div class="card" style="width: 18rem">
-              <img
-                src="./public/assets/img/annonce_1.jpg"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <div class="d-flex">
-                  <h5 class="card-title">Graines de chia</h5>
-                  <div><i class="fa-regular fa-star"></i>5</div>
-                </div>
-                <p class="card-text">Amiens, 80000</p>
-              </div>
-            </div>
-            <div class="card" style="width: 18rem">
-              <img
-                src="./public/assets/img/annonce_1.jpg"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <div class="d-flex">
-                  <h5 class="card-title">Graines de chia</h5>
-                  <div><i class="fa-regular fa-star"></i>5</div>
-                </div>
-                <p class="card-text">Amiens, 80000</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- Arbres -->
-        <div>
-          <div class="d-flex justify-content-between align-items-center">
-            <h2>Graines</h2>
-            <a href="#">Tout voir</a>
-          </div>
-          <div class="d-flex gap-3">
-            <div class="card" style="width: 18rem">
-              <img
-                src="./public/assets/img/annonce_1.jpg"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <div class="d-flex">
-                  <h5 class="card-title">Graines de chia</h5>
-                  <div><i class="fa-regular fa-star"></i>5</div>
-                </div>
-                <p class="card-text">Amiens, 80000</p>
-              </div>
-            </div>
-            <div class="card" style="width: 18rem">
-              <img
-                src="./public/assets/img/annonce_1.jpg"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <div class="d-flex">
-                  <h5 class="card-title">Graines de chia</h5>
-                  <div><i class="fa-regular fa-star"></i>5</div>
-                </div>
-                <p class="card-text">Amiens, 80000</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- Fin main -->
-
-        <nav class="navbar sticky-bottom rounded-5 p-0 mb-10 mx-5 border border-5 ">
-            <div class="container justify-content-center">
-                <ul class="list d-flex flex-nowrap p-0 m-0 ">
-                    <li class="navbar-brand d-flex flex-row mx-2" href="#">
-                        <div class="flex-row text-center p-0">
-                            <i class="bi bi-house fs-1"></i>
-                            <p>Accueil</p>
-                        </div>
-                    </li>
-                    <li class="navbar-brand d-flex flex-nowrap mx-1" href="#">
-                        <div class="flex-row text-center p-0">
-                            <i class="bi bi-card-list fs-1"></i>
-                            <p>Annonces</p>
-                        </div>
-                    </li>
-                    <li class="navbar-brand d-flex flex-nowrap mx-1" href="#">
-                        <div class="text-center p-0">
-                            <i class="bi bi-lightbulb fs-1"></i>
-                            <p>Conseils</p>
-                        </div>
-                    </li>
-                    <li class="navbar-brand d-flex flex-nowrap mx-2" href="#">
-                        <div class="text-center p-0">
-                            <i class="bi bi-megaphone fs-1"></i>
-                            <p>Sorties</p>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+        <main>
         
-    </main>
+            <body>
+                <div class="container fluid">
+                <h1>Créer une Annonce</h1>
+                <form method="POST" enctype="multipart/form-data">
+                    <div class="container row d-flex">
+                    <div class="col-7">
+                        <label for="title">Titre de l'annonce(*)</label><br>
+                        <input type="text" id="title" name="title" required><br>
+                    </div>
+                    <div class="col-3">
+                        <label for="category">Catégorie(*)</label><br>
+                        <select id="category" name="category" required>
+                            <option value="seeds">Graines</option>
+                            <option value="plants">Plantes</option>
+                            <option value="trees">Arbres</option>
+                        </select><br>
+                    </div>
+                    </div>
+                    <div class="container row d-flex">
+                    <div class="col-7">
+                        <label for="description">Descriptif de l'annonce(*)</label><br>
+                        <textarea id="description" name="description" rows="4" cols="50" required></textarea><br>
+                    </div>
+                    <div class="container row d-flex">
+                    <div class="col-3">
+                        <label for="postalCode">Code Postal(*)</label><br>
+                        <input type="text" id="postalCode" name="postalCode" required><br>
+                    </div>
+                    <div class="col-3">
+                        <label for="phone">Numéro de Téléphone:</label><br>
+                        <input type="tel" id="phone" name="phone" required><br>
+                    </div>
+                    <div>
+                        <input type="checkbox" id="autorisationPhone" name="autorisationPhone">
+                        <label for="autorisationPhone">Autoriser à me joindre par téléphone depuis l'annonce</label><br>
+                    </div>
+                    </div>
+                    <h2></h2>
+                    <div>
+                        <label for="photos">Ajouter des photos</label><br>
+                        <input type="file" id="photos" name="photos" accept=".jpg,.jpeg,.png" multiple><br>
+                    </div>
+                    <div>
+                        <input type="submit" value="Mettre en ligne">
+                    </div>
+                </div>
+                </form>
 
-    <footer></footer>
+        </main>
 
-    <script
-      src="https://kit.fontawesome.com/b4f9175766.js"
-      crossorigin="anonymous"
-    ></script>
-    <footer>
-        
-    </footer>
-    <script src="./lib/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
-  </body>
+        <footer></footer>
+
+        <script src="https://kit.fontawesome.com/b4f9175766.js" crossorigin="anonymous"></script>
+        <footer>
+
+        </footer>
+        <script src="./lib/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
+    </body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
