--- a/index.html
+++ b/index.html
@@ -14,16 +14,19 @@
 </head>
 
 <body>
+    <!-- Header -->
     <header>
+
+    <!-- Fin header -->
     </header>
 
     <!-- Main -->
     <main>
       <!-- Hero -->
-      <section id="hero" class="container-fluid bg-image">
+      <section id="hero" class="container-fluid">
         <div class="row">
           <div
-            class="col-12 d-flex flex-column justify-content-center bg-image"
+            class="col-12 d-flex flex-column justify-content-center bg-hero-image"
           >
             <div class="container p-0">
               <div class="row">
@@ -36,7 +39,7 @@
                 </div>
                 <!-- Button call to action -->
                 <div class="col-12 d-flex justify-content-end">
-                  <button class="btn-action">Trouver vos plantes</button>
+                  <button class="btn btn-action">Trouver vos plantes</button>
                 </div>
               </div>
             </div>
@@ -47,12 +50,12 @@
       <!-- Groupe de buttons -->
       <section class="container d-lg-none mt-4">
         <div class="d-flex justify-content-between">
-          <button class="btn-mobile-home d-flex align-items-center justify-content-center py-1"><img src="./public/assets/img/icon-seeds.png" class="w-25 pe-1" alt="" /><p class="m-0">Graines</p></button>
-          <button class="btn-mobile-home d-flex align-items-center justify-content-center py-1"><img src="./public/assets/img/icon-plant.png" class="w-25 pe-1" alt=""><p class="m-0">Plantes</p></button>
-          <button class="btn-mobile-home d-flex align-items-center justify-content-center py-1"><img src="./public/assets/img/icon-tree.png" class="w-25 pe-1" alt=""><p class="m-0">Arbres</p></button>
+          <button class="btn btn-mobile-home d-flex align-items-center justify-content-center py-1"><img src="./public/assets/img/icon-seeds.png" class="w-25 pe-1" alt="" /><p class="m-0">Graines</p></button>
+          <button class="btn btn-mobile-home d-flex align-items-center justify-content-center py-1"><img src="./public/assets/img/icon-plant.png" class="w-25 pe-1" alt=""><p class="m-0">Plantes</p></button>
+          <button class="btn btn-mobile-home d-flex align-items-center justify-content-center py-1"><img src="./public/assets/img/icon-tree.png" class="w-25 pe-1" alt=""><p class="m-0">Arbres</p></button>
         </div>
         <div class="d-flex justify-content-center mt-3 mb-3">
-          <button class="btn-action">CRÉER UNE ANNONCE</button>
+          <button class="btn btn-action">CRÉER UNE ANNONCE</button>
         </div>
       </section>
 
@@ -134,6 +137,9 @@
               </div>
             </div>
           </div>
+          <div class="d-grid gap-2 col-4 mx-auto">
+            <button type="button" class="btn btn-more d-none d-lg-block">Plus</button>
+          </div>
         </div>
 
         <!-- Plantes -->
@@ -211,6 +217,9 @@
                 <p class="card-text">Amiens, 80000</p>
               </div>
             </div>
+          </div>
+          <div class="d-grid gap-2 col-4 mx-auto">
+            <button type="button" class="btn btn-more d-none d-lg-block">Plus</button>
           </div>
         </div>
 
@@ -290,10 +299,25 @@
               </div>
             </div>
           </div>
+          <div class="d-grid gap-2 col-4 mx-auto">
+            <button type="button" class="btn btn-more d-none d-lg-block">Plus</button>
+          </div>
         </div>
       </section>
 
-        
+      <!-- Evenements -->
+      <section id="events" class="container d-none d-lg-block">
+        <div class="row mt-4 bg-event-image">
+          <div class="col-12 pt-4">
+            <p>Les évènements près de chez vous</p>
+          </div>
+          <div class="col-12 pb-4 d-flex justify-content-end align-items-end">
+            <button type="button" class="btn btn-light border-0 btn-more">Voir tous les évènements</button>
+          </div>
+        </div>
+      </section>
+
+      <!-- Navbar mobile -->
       <nav class="navbar navbar-mobile d-lg-none bg-white sticky-bottom rounded-4 p-0 mb-10 mx-3 border border-secondary-subtle">
             <div class="container justify-content-center">
                 <ul class="list d-flex flex-nowrap p-0 m-0 ">
