--- a/index.html
+++ b/index.html
@@ -13,226 +13,71 @@
   <body>
 </head>
 
-<body>
-    <header>
-      <!-- <div class="container">
-        <div class="row">
-          <div class="col-6">
-            <div class="logo">
-              <img src="./public/assets/img/CollabGarden.png" />
+  <footer>
+      <div class="container-fluid footerBg">
+        <div class="row text-center">
+
+          <div class="col-12">
+            <div class="socialMedia">
+              <img src="./public/assets/img/socialmedia/insta.png" class="icon_socialMedia bg_Social">
+              <img src="./public/assets/img/socialmedia/fb.png" class="icon_socialMedia bg_Social">
+              <img src="./public/assets/img/socialmedia/x.png" class="icon_socialMedia bg_Social">
             </div>
           </div>
 
-          <div class="col-6">
-            <div class="p_profil">
-              <img src="./public/assets/img/p_profil.png" />
-            </div>
+          <div class="col-4">
+            <p>Politique de confidentialitée</p>
+          </div>
+
+          <div class="col-4">
+            <div>Contact</div>
+          </div>
+
+          <div class="col-4">
+              <div>Mentions légales</div>
           </div>
 
           <div class="col-12">
-            <div class="search_bar"></div>
+            <div>Source photos: Pixabay & Unsplash</div>
+            <div>© CollabGarden</div>
           </div>
-        </div>
-      </div> -->
-    </header>
 
-    <!-- Main -->
-    <main>
-      <!-- Hero -->
-      <section id="hero" class="container-fluid bg-image">
-        <div class="row">
-          <div
-            class="col-12 d-flex flex-column justify-content-center bg-image"
-          >
-            <div class="container p-0">
-              <div class="row">
-                <!-- Slogan -->
-                <div class="col-12 d-flex justify-content-end">
-                  <p>
-                    Échangeons graines, plantes et arbres pour cultiver la
-                    diversité ensemble !
-                  </p>
-                </div>
-                <!-- Button call to action -->
-                <div class="col-12 d-flex justify-content-end">
-                  <button class="btn-action">Trouver vos plantes</button>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
-      </section>
+      </div>
 
-      <!-- Groupe de buttons -->
-      <section class="container d-lg-none mt-4">
-        <div class="d-flex justify-content-between">
-          <button class="btn-mobile-home"><img src="" alt="" />Graines</button>
-          <button class="btn-mobile-home"><img src="" alt="" />Plantes</button>
-          <button class="btn-mobile-home"><img src="" alt="" />Arbres</button>
-        </div>
-        <div class="d-flex justify-content-center mt-3">
-          <button class="btn-action">CRÉER UNE ANNONCE</button>
-        </div>
-      </section>
 
-      <!-- Annonces -->
-      <section class="categories container">
-        <!-- Graines -->
-        <div>
-          <div class="d-flex justify-content-between align-items-center">
-            <h2>Graines</h2>
-            <a href="#">Tout voir</a>
-          </div>
-          <div class="d-flex gap-3">
-            <div class="card" style="width: 18rem">
-              <img
-                src="./public/assets/img/annonce_1.jpg"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <div class="d-flex">
-                  <h5 class="card-title">Graines de chia</h5>
-                  <div><i class="fa-regular fa-star"></i>5</div>
-                </div>
-                <p class="card-text">Amiens, 80000</p>
-              </div>
-            </div>
-            <div class="card" style="width: 18rem">
-              <img
-                src="./public/assets/img/annonce_1.jpg"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <div class="d-flex">
-                  <h5 class="card-title">Graines de chia</h5>
-                  <div><i class="fa-regular fa-star"></i>5</div>
-                </div>
-                <p class="card-text">Amiens, 80000</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- Plantes -->
-        <div>
-          <div class="d-flex justify-content-between align-items-center">
-            <h2>Plantes</h2>
-            <a href="#">Tout voir</a>
-          </div>
-          <div class="d-flex gap-3">
-            <div class="card" style="width: 18rem">
-              <img
-                src="./public/assets/img/annonce_1.jpg"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <div class="d-flex">
-                  <h5 class="card-title">Graines de chia</h5>
-                  <div><i class="fa-regular fa-star"></i>5</div>
-                </div>
-                <p class="card-text">Amiens, 80000</p>
-              </div>
-            </div>
-            <div class="card" style="width: 18rem">
-              <img
-                src="./public/assets/img/annonce_1.jpg"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <div class="d-flex">
-                  <h5 class="card-title">Graines de chia</h5>
-                  <div><i class="fa-regular fa-star"></i>5</div>
-                </div>
-                <p class="card-text">Amiens, 80000</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- Arbres -->
-        <div>
-          <div class="d-flex justify-content-between align-items-center">
-            <h2>Graines</h2>
-            <a href="#">Tout voir</a>
-          </div>
-          <div class="d-flex gap-3">
-            <div class="card" style="width: 18rem">
-              <img
-                src="./public/assets/img/annonce_1.jpg"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <div class="d-flex">
-                  <h5 class="card-title">Graines de chia</h5>
-                  <div><i class="fa-regular fa-star"></i>5</div>
-                </div>
-                <p class="card-text">Amiens, 80000</p>
-              </div>
-            </div>
-            <div class="card" style="width: 18rem">
-              <img
-                src="./public/assets/img/annonce_1.jpg"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <div class="d-flex">
-                  <h5 class="card-title">Graines de chia</h5>
-                  <div><i class="fa-regular fa-star"></i>5</div>
-                </div>
-                <p class="card-text">Amiens, 80000</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- Fin main -->
 
-        <nav class="navbar sticky-bottom rounded-5 p-0 mb-10 mx-5 border border-5 ">
-            <div class="container justify-content-center">
-                <ul class="list d-flex flex-nowrap p-0 m-0 ">
-                    <li class="navbar-brand d-flex flex-row mx-2" href="#">
-                        <div class="flex-row text-center p-0">
-                            <i class="bi bi-house fs-1"></i>
-                            <p>Accueil</p>
-                        </div>
-                    </li>
-                    <li class="navbar-brand d-flex flex-nowrap mx-1" href="#">
-                        <div class="flex-row text-center p-0">
-                            <i class="bi bi-card-list fs-1"></i>
-                            <p>Annonces</p>
-                        </div>
-                    </li>
-                    <li class="navbar-brand d-flex flex-nowrap mx-1" href="#">
-                        <div class="text-center p-0">
-                            <i class="bi bi-lightbulb fs-1"></i>
-                            <p>Conseils</p>
-                        </div>
-                    </li>
-                    <li class="navbar-brand d-flex flex-nowrap mx-2" href="#">
-                        <div class="text-center p-0">
-                            <i class="bi bi-megaphone fs-1"></i>
-                            <p>Sorties</p>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-        
-    </main>
 
-    <footer></footer>
+      <div class="container-fluid footerBg_desktop">
+        <div class="row text-center">
 
-    <script
-      src="https://kit.fontawesome.com/b4f9175766.js"
-      crossorigin="anonymous"
-    ></script>
-    <footer>
-        
-    </footer>
+          <div class="col-6 mt-2">
+            <p>Contactez nous:</p>
+            <div>Téléphone: 0621222324</div>
+            <div>Email: collabgarden@gmail.com</div>
+            <hr>
+            <p>Mentions légales</p>
+          </div>
+
+          <div class="col-6 mt-4">
+            <div>ANNONCES</div>
+            <div>CONSEILS & JARDIN</div>
+            <div>EVENEMENTS</div>
+            <hr>
+            <p>Politique de confidentialitée</p>
+          </div>
+
+          <div class="col-12">
+              <div>© CollabGarden</div>
+              <div>Source photos: Pixabay & Unsplash</div>
+          </div>
+
+        </div>
+      </div>
+
+  
+  </footer>
+
     <script src="./lib/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
   </body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
