--- a/index.html
+++ b/index.html
@@ -1,88 +1,96 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./lib/bootstrap-5.3.3-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/bootstrap-icons.svg">
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="./public/assets/css/style.css">
-    <title>CollabGarden</title>
-  </head>
-  <body>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./lib/bootstrap-5.3.3-dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/bootstrap-icons.svg">
+  <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
+  <link rel="stylesheet" href="./public/assets/css/style.css">
+  <title>CollabGarden</title>
 </head>
 
-  <footer>
-      <div class="container-fluid footerBg">
-        <div class="row text-center">
 
-          <div class="col-12">
-            <div class="socialMedia">
-              <img src="./public/assets/img/socialmedia/insta.png" class="icon_socialMedia bg_Social">
-              <img src="./public/assets/img/socialmedia/fb.png" class="icon_socialMedia bg_Social">
-              <img src="./public/assets/img/socialmedia/x.png" class="icon_socialMedia bg_Social">
+  <body>
+    <main>
+      <div class="container-fluid p-0 mobile d-md-none align-items-center justify-content-center it">
+        <img src="../CollabGarden/public/assets/img/profil/bgProfil.jpg" class="bgProfil img-fluid">
+        <div class="row">
+          <div class="col-4">
+            <img src="public/assets/img/profil/pasMal.png" class="p_profil ms-3">
+          </div>
+          <div class="col-6 py-1 mt-2">
+            <button class="btn btn-mobile-follow d-flex align-items-center justify-content-center"><img
+                src="public/assets/img/profil/follow.png" class="w-25 pe-1" alt="" />
+              <p class="m-0">SUIVRE</p>
+            </button>
+          </div>
+          <div class="col-2 py-1 mt-3">
+            <img src="public/assets/img/profil/plus.png" class="plus" alt="" />
+          </div>
+        </div>
+
+        <div class="mt-3 ms-3">
+          <h2>Colette</h2>
+          <div class="d-flex">
+            <img src="public/assets/img/profil/rating.png" class="rating">
+            <img src="public/assets/img/profil/rating.png" class="rating">
+            <img src="public/assets/img/profil/rating.png" class="rating">
+            <img src="public/assets/img/profil/rating.png" class="rating">
+            <img src="public/assets/img/profil/rating.png" class="rating">
+            <div>5/5</div>
+          </div>
+          <div class="mt-2">Membre depuis le 12/03/2024</div>
+          <div>Amiens, 80000</div>
+          <div class="info">Passionné par la plante depuis ma tendre jeuneusse.</div>
+
+        </div>
+      </div>
+
+
+      <div class="container desktop d-none d-md-block align-items-center justify-content-center">
+        <div class="box_info">
+          <div class="row">
+            <div class="col-3 ms-3">
+              <img src="public/assets/img/profil/pasMal.png" class="p_profil_desktop ms-3 my-3">
+            </div>
+            <div class="col-6 py-1 mt-2">
+              <button class="btn btn-mobile-follow d-flex align-items-center justify-content-center"><img
+                  src="public/assets/img/profil/follow.png" class="w-25 pe-1" alt="" />
+                <p class="m-0">SUIVRE</p>
+              </button>
+              <div class="ms-5">
+                <h2>Colette</h2>
+                <div class="d-flex">
+                  <img src="public/assets/img/profil/rating.png" class="rating">
+                  <img src="public/assets/img/profil/rating.png" class="rating">
+                  <img src="public/assets/img/profil/rating.png" class="rating">
+                  <img src="public/assets/img/profil/rating.png" class="rating">
+                  <img src="public/assets/img/profil/rating.png" class="rating">
+                  <div>5/5</div>
+                </div>
+                <div class="mt-2">Membre depuis le 12/03/2024</div>
+                <div>Amiens, 80000</div>
+                <div class="info f">Passionné par la plante depuis ma tendre jeuneusse.</div>
+              </div>
+            </div>
+            <div class="col-2 py-1 mt-3">
+              <img src="public/assets/img/profil/plus.png" class="plus" alt="options" />
             </div>
           </div>
-
-          <div class="col-4">
-            <p>Politique de confidentialitée</p>
-          </div>
-
-          <div class="col-4">
-            <div>Contact</div>
-          </div>
-
-          <div class="col-4">
-              <div>Mentions légales</div>
-          </div>
-
-          <div class="col-12">
-            <div>Source photos: Pixabay & Unsplash</div>
-            <div>© CollabGarden</div>
-          </div>
-
         </div>
       </div>
 
-
-
-
-      <div class="container-fluid footerBg_desktop">
-        <div class="row text-center">
-
-          <div class="col-6 mt-2">
-            <p>Contactez nous:</p>
-            <div>Téléphone: 0621222324</div>
-            <div>Email: collabgarden@gmail.com</div>
-            <hr>
-            <p>Mentions légales</p>
-          </div>
-
-          <div class="col-6 mt-4">
-            <div>ANNONCES</div>
-            <div>CONSEILS & JARDIN</div>
-            <div>EVENEMENTS</div>
-            <hr>
-            <p>Politique de confidentialitée</p>
-          </div>
-
-          <div class="col-12">
-              <div>© CollabGarden</div>
-              <div>Source photos: Pixabay & Unsplash</div>
-          </div>
-
-        </div>
-      </div>
-
-  
-  </footer>
+      <!-- annonces Marina -->
+      
+    </main>
 
     <script src="./lib/bootstrap-5.3.3-dist/js/bootstrap.bundle.min.js"></script>
-  </body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-</body>
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"></script>
+  </body>
 
 </html>
